wip: fix the tooltip overflow

--- a/frontend/amplace-app/src/app/globals.css
+++ b/frontend/amplace-app/src/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #81f0ff;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #e6f9ff;
     --foreground: #ededed;
   }
 }
